[gd_scene load_steps=4 format=3 uid="uid://60rl5jlm3ob6"]

[ext_resource type="Script" path="res://scripts/IngredientMode.gd" id="1_nopfp"]
[ext_resource type="Texture2D" uid="uid://ds1wxdvgpq720" path="res://assets/ingredients selecters.png" id="2_s2gaq"]
[ext_resource type="PackedScene" uid="uid://5f4bomx4pli4" path="res://scripts/ingredients_selecter.tscn" id="3_fgpdy"]

[node name="IngredientMode" type="Control"]
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -296.5
offset_right = 335.0
offset_bottom = 296.5
grow_vertical = 2
script = ExtResource("1_nopfp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.599976, -1.52002)
texture = ExtResource("2_s2gaq")
centered = false

[node name="Ingredient1" parent="." instance=ExtResource("3_fgpdy")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.135
anchor_right = 0.765
anchor_bottom = 0.135
offset_top = -63.0
offset_right = 63.5
offset_bottom = 65.0
ingredient = 1

[node name="Ingredient2" parent="." instance=ExtResource("3_fgpdy")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.378
anchor_right = 0.765
anchor_bottom = 0.378
offset_top = -63.0
offset_right = 63.0
offset_bottom = 63.0

[node name="Ingredient3" parent="." instance=ExtResource("3_fgpdy")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.622
anchor_right = 0.765
anchor_bottom = 0.622
offset_top = -63.0
offset_right = 63.0
offset_bottom = 63.0
ingredient = 3

[node name="Ingredient4" parent="." instance=ExtResource("3_fgpdy")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.865
anchor_right = 0.765
anchor_bottom = 0.865
offset_top = -63.0
offset_right = 63.0
offset_bottom = 63.0
ingredient = 4
